--- a/packages/unicss/package.json
+++ b/packages/unicss/package.json
@@ -1,22 +1,17 @@
 {
-    "name": "@unicss/react",
+    "name": "unicss",
     "version": "0.0.2",
-    "description": "React integration for UniCSS",
+    "description": "The framework-agnostic CSS-in-JS implementation",
     "author": "Josemi Juanes <hello@josemi.xyz>",
     "type": "module",
     "license": "MIT",
     "repository": "https://github.com/jmjuanes/unicss",
     "bugs": "https://github.com/jmjuanes/unicss/issues",
     "homepage": "https://www.josemi.xyz/unicss",
+    "main": "index.js",
     "exports": "./index.js",
     "keywords": [
         "unicss",
-        "react"
-    ],
-    "dependencies": {
-        "@unicss/core": "^0.0.2"
-    },
-    "peerDependencies": {
-        "react": ">= 17"
-    }
+        "css-in-js"
+    ]
 }
