--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "unicss",
+    "name": "unicss-repo",
     "version": "0.0.2",
     "private": true,
-    "description": "",
+    "description": "The universal CSS-In-JS microlibrary",
     "author": "Josemi Juanes <hello@josemi.xyz>",
     "license": "MIT",
     "homepage": "https://www.josemi.xyz/unicss",
@@ -16,16 +16,11 @@
     },
     "devDependencies": {
         "@babel/core": "^7.18.13",
-        "@babel/plugin-transform-react-jsx": "^7.18.10",
         "@babel/plugin-transform-runtime": "^7.18.10",
         "@babel/preset-env": "^7.18.10",
-        "@babel/preset-react": "^7.18.6",
         "babel-jest": "^29.0.1",
         "cross-env": "^7.0.3",
         "jest": "^29.0.1",
-        "jest-environment-jsdom": "^29.0.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-test-renderer": "^17.0.2"
+        "jest-environment-jsdom": "^29.0.1"
     }
 }
