--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     },
     "devDependencies": {
         "@babel/core": "^7.18.13",
+        "@babel/plugin-transform-react-jsx": "^7.18.10",
         "@babel/plugin-transform-runtime": "^7.18.10",
         "@babel/preset-env": "^7.18.10",
+        "@babel/preset-react": "^7.18.6",
         "babel-jest": "^29.0.1",
         "cross-env": "^7.0.3",
         "jest": "^29.0.1",
