--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
-    "name": "unicss-repo",
+    "name": "unicss",
     "version": "0.1.0",
-    "private": true,
     "description": "The universal CSS-In-JS microlibrary",
     "author": "Josemi Juanes <hello@josemi.xyz>",
     "license": "MIT",
-    "homepage": "https://www.josemi.xyz/unicss",
     "repository": "https://github.com/jmjuanes/unicss",
     "bugs": "https://github.com/jmjuanes/unicss/issues",
-    "workspaces": [
-        "packages/*"
-    ],
+    "type": "module",
+    "main": "index.js",
+    "exports": {
+        ".": "./index.js",
+        "./theme": "./theme.js"
+    },
     "scripts": {
         "test": "jest"
     },
+    "files": [
+        "index.js",
+        "theme.js",
+        "README.md"
+    ],
     "devDependencies": {
         "@babel/core": "^7.18.13",
-        "@babel/plugin-transform-react-jsx": "^7.18.10",
-        "@babel/plugin-transform-runtime": "^7.18.10",
         "@babel/preset-env": "^7.18.10",
-        "@babel/preset-react": "^7.18.6",
         "babel-jest": "^29.0.1",
-        "cross-env": "^7.0.3",
         "jest": "^29.0.1",
         "jest-environment-jsdom": "^29.0.1"
-    }
+    },
+    "keywords": [
+        "unicss",
+        "css-in-js"
+    ]
 }
