--- a/package.json
+++ b/package.json
@@ -30,5 +30,14 @@
     "keywords": [
         "unicss",
         "css-in-js"
-    ]
+    ],
+    "babel": {
+        "presets": [
+            "@babel/preset-env"
+        ]
+    },
+    "jest": {
+        "clearMocks": true,
+        "testEnvironment": "jsdom"
+    }
 }
